--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
-
 monitor_speed = 921600
 upload_speed = 921600
 monitor_flags = --raw
+lib_deps = 
+	bblanchon/ArduinoJson@^6.19.4
+	knolleary/PubSubClient@^2.8
