--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 921600
 upload_speed = 921600
 monitor_flags = --raw
+monitor_raw = yes
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	knolleary/PubSubClient@^2.8
